Fixed Big Operator Operand Backspace Bug.
Also fixed overlapping issues with cursor, symbol and bracket.

--- a/src/app/css/equationEditor.css
+++ b/src/app/css/equationEditor.css
@@ -2,10 +2,11 @@
     position: relative;
     line-height: 1;
     /*overflow: visible;*/
-    overflow: hidden;
+    /*overflow: hidden;*/
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
+
 }
 
 .activeContainer .hoverContainer {
@@ -171,8 +172,15 @@ div.activeContainer {
 
 .eqEdWrapper {
     z-index: 3;
-    /*overflow-y: hidden;
-    overflow-x: visible;*/
+    /*overflow: hidden;*/
+}
+
+.bracketWrapper {
+    overflow: hidden;
+}
+
+.symbolWrapper {
+    overflow: visible;
 }
 
 .activeContainer .topLevelEmptyContainerWrapper {
